workaround to avoid the illegal access warning to display